# data-ingestion

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prow-crawler  LICENSE  README.md  README_prow_crawler.md  README_prow_crawler_docker.md  app.py  payload1.json  pr_uploader.py  prow_crawler.py  pyproject.toml  requirements.txt  run-prow-crawler.sh
.github/workflows/: pytest.yml
config/: README.md  buildconfig-prow-crawler.yaml  configmap-prow-crawler.yaml  configmap.yaml  cronjob.yaml  deploy-cronjob.sh  deploy-prow-crawler.sh  deployment.yaml  imagestream-prow-crawler.yaml  ingress.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml
osci/: action.yaml
tests/: test_app.py  test_webhook.py
tracker/: periodic-ci-codeready-toolchain-toolchain-e2e-master-ci-daily.txt
