[project]
authors = [{name = "Baiju Muthukadan", email = "baiju.m.mail@gmail.com"}]
dependencies = []
name = "pixi-py"
requires-python = ">= 3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi_py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=25.1.0,<26"
flask = ">=3.1.0,<4"
pytest = ">=8.3.5,<9"
flake8 = ">=7.1.2,<8"
google-cloud-storage = ">=3.1.0,<4"
requests = ">=2.32.3,<3"

[tool.hatch.build.targets.wheel]
packages = ["."]
